# certificomx

./: .env.example  pyproject.toml  render.yaml  vercel.json
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/i18n/: strings.ts
frontend/src/pages/: Certifications.tsx  Dashboard.tsx  Employers.tsx  EnglishAssess.tsx  Jobs.tsx  Landing.tsx  MarketIntel.tsx  WorkerDetail.tsx  Workers.tsx
src/certificomx/: ai.py  api.py  cli.py  database.py  models.py  seed.py
